<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.byh.test1.MainActivity">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_home" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="100dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCloseInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBtnCloseInput"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtReturn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">


        <TextView
            android:id="@+id/txtVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Video Player:" />
        <EditText
            android:id="@+id/edtVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/data/1.avi"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btnVideoPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtVideoPlay" />

        <Button
            android:id="@+id/btnVideoStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtStop" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/content4"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_weight="1">
    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="177dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/txtMp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMp3"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edtMp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/data/1.mp3"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnMp3Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMp3Play" />
        <Button
            android:id="@+id/btnMp3Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtStopMp3" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
